Refactor `DataUtil` for nullable annotations and simplify `convert` method. Enhance test coverage for `convert` methods with new test cases. Include additional test scenarios in `KeyStoreUtilTest` and `TextUtilTest`.